--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!-- Adsterra Smart Link entegrasyonu -->
   <script>
     // 🔹 Adsterra Smart Link'ini buraya yaz:
-    const SMART_LINK = "https://lyzo.io/IveQP";
+    const SMART_LINK = "https://leanintegrationdebauch.com/u0kht2nps?key=3417af3f7cac2f8132ad9a9144e38c03";
 
     // Tüm tıklanabilir elemanlar
     document.addEventListener("DOMContentLoaded", () => {
